#2275 - fix page padding and alignment with survey title

--- a/packages/survey-creator-core/src/components/page.scss
+++ b/packages/survey-creator-core/src/components/page.scss
@@ -6,7 +6,7 @@ svc-page {
 
 .svc-page__content {
   position: relative;
-  padding: calcSize(4);
+  padding: calcSize(1);
   border: 2px solid transparent;
   box-sizing: border-box;
   width: 100%;
